@@ -109,7 +109,7 @@ void starling_continuous_variant_caller::add_indel_call(
 {
     // determine VF
     double vf = isri.n_q30_indel_reads / ((double)isri.total_q30_reads());
-    if (vf > opt.min_het_vf)
+    if (vf > opt.min_het_vf || id.is_forced_output)
     {
         info.calls.emplace_back(isri.total_q30_reads(), isri.n_q30_indel_reads,
                                 ik, id, iri, isri);
