@@ -1,3 +1,5 @@
+- STAR-64 Output forced indels & SNPs in continuous calling mode. Modify
+  output of GQX to be per-call, not per-site
 - WGSW-714 fix PLs not printed at nonref site
 - STAR-60 Update codon phaser to correctly handle interaction between GT and
   alleles that are dropped due to low phasing support.
